--- a/turbo.json
+++ b/turbo.json
@@ -7,8 +7,10 @@
     },
     "lint": {},
     "dev": {
-      "cache": false,
-      "persistent": true
+      "cache": false
+    },
+    "clean": {
+      "cache": false
     }
   }
 }
