--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
-    "@repo/ui": "*"
+    "@teobale/ui": "*"
   },
   "devDependencies": {
-    "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@teobale/eslint-config": "*",
+    "@teobale/tsconfig": "*",
     "eslint": "^8.57.0",
     "typescript": "^5.3.3",
     "vite": "^5.1.4"
