--- a/package.json
+++ b/package.json
@@ -1,20 +1,28 @@
 {
   "private": true,
-  "scripts": {
-    "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
-  },
-  "devDependencies": {
-    "eslint": "^8.57.0",
-    "@repo/eslint-config": "*",
-    "prettier": "^3.2.5",
-    "turbo": "latest"
-  },
-  "packageManager": "yarn@1.22.21",
   "workspaces": [
     "apps/*",
     "packages/*"
-  ]
+  ],
+  "scripts": {
+    "build": "turbo build --no-cache",
+    "dev": "turbo dev --no-cache --parallel --continue",
+    "lint": "turbo lint",
+    "storybook": "cd apps/docs && yarn storybook",
+    "build-storybook": "cd apps/docs && yarn build-storybook",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+  },
+  "devDependencies": {
+    "@teobale/eslint-config": "*",
+    "eslint": "^8.57.0",
+    "prettier": "^3.2.5",
+    "turbo": "latest"
+  },
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.5.0",
+    "@typescript-eslint/parser": "^6.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "packageManager": "yarn@1.22.21"
 }
