--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "devDependencies": {
     "@teobale/eslint-config": "*",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.3",
     "turbo": "latest"
   },
   "dependencies": {
