--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -33,6 +33,8 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -41,7 +43,9 @@
     "postcss": "^8.4.38",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "storybook": "^8.0.8",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
