--- a/packages/@teobale-button/package.json
+++ b/packages/@teobale-button/package.json
@@ -22,10 +22,14 @@
     "@teobale/eslint-config": "*",
     "@teobale/tsconfig": "*",
     "autoprefixer": "^10.4.19",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "eslint": "^8.57.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7",
     "tsup": "7.2.0",
     "typescript": "^5.3.3"
   },
