--- a/packages/@teobale-config-tailwind/package.json
+++ b/packages/@teobale-config-tailwind/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
